update title, add new bg at hero section

--- a/index.html
+++ b/index.html
@@ -179,9 +179,8 @@
                         в строительстве!
                     </h1>
                     <p class="fade-in-section">
-                        Выполняем дорожные, земляные и строительные работы.
-                        Предоставляем в аренду и перевозим спецтехнику по всей
-                        России.
+                        Выполняем строительно-монтажные работы и занимаемся
+                        перевозкой сыпучих грузов по всей МО.
                     </p>
                     <a href="#contacts" class="btn fade-in-section"
                         >Получить консультацию</a
