--- a/index.html
+++ b/index.html
@@ -180,8 +180,8 @@
                         в строительстве!
                     </h1>
                     <p class="fade-in-section">
-                        Выполняем строительно-монтажные работы и занимаемся
-                        перевозкой сыпучих грузов по всей МО.
+                        Выполняем строительно-монтажные работы, занимаемся
+                        поставкой и перевозкой нерудных материалов по всей МО.
                     </p>
                     <a href="#contacts" class="btn fade-in-section"
                         >Получить консультацию</a
